# Triton8

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
assets/readme/: results-speedup-tflops.md
examples/walkthrough/: WALKTHROUGH.md
kb/: correctness.yaml  implementation_reference.md  optimization_strategies.md  workflow_details.md
kb/examples/: gemm_activation_optimized.py  gemm_activation_unoptimized.py  index.yaml  matmul_at_optimized.py  matmul_at_unoptimized.py
skills/: PROFILING.md  benchmark.py  validate_triton.py
test_kernels/: 14_Gemm_Divide_Sum_Scaling.yaml  35_Conv2d_Subtract_HardSwish_MaxPool_Mish.yaml  35_Conv2d_Subtract_HardSwish_MaxPool_Mish_pytorch.py  39_Gemm_Scale_BatchNorm.yaml  45_Gemm_Sigmoid_LogSumExp.yaml  48_Conv3d_Scaling_Tanh_Multiply_Sigmoid.yaml  48_Conv3d_Scaling_Tanh_Multiply_Sigmoid_pytorch.py  55_Matmul_MaxPool_Sum_Scale.yaml  61_ConvTranspose3d_ReLU_GroupNorm.yaml  61_ConvTranspose3d_ReLU_GroupNorm_pytorch.py  68_Matmul_Min_Subtract.yaml  70_Gemm_Sigmoid_Scaling_ResidualAdd.yaml  81_Gemm_Swish_Divide_Clamp_Tanh_Clamp.yaml  84_Gemm_BatchNorm_Scaling_Softmax.yaml  84_Gemm_BatchNorm_Scaling_Softmax_pytorch.py  95_Matmul_Add_Swish_Tanh_GELU_Hardtanh.yaml  99_Matmul_GELU_Softmax.yaml
test_kernels/flash/: 1_FlashAttention_Fwd.yaml  1_FlashAttention_Fwd_16k.yaml  1_FlashAttention_Fwd_2k-71.yaml  1_FlashAttention_Fwd_2k.yaml  1_FlashAttention_Fwd_4k.yaml  1_FlashAttention_Fwd_8k.yaml  1_FlashAttention_Fwd_all.yaml  1_FlashAttention_Fwd_triton.py
