[project]
name = "triton8-public"
version = "1.0.0"
description = "Triton kernel optimizer for Intel XPU"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Intel AI Software" }]
dependencies = [
  "ai-bench @ git+https://github.com/libxsmm/AI-bench@9afa0d8356e42fee09d69d9e5731a5dcb5edd5d2",
  "torch==2.10+xpu",
]

[project.urls]
Homepage = "https://github.com/intellabs/Triton8"
Repository = "https://github.com/intellabs/Triton8"
Issues = "https://github.com/intellabs/Triton8/issues"

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-xpu" }

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
